tests/reference/asr-test_set3-f9bbffb.stderr
semantic error: pop() takes no arguments (1 given)
 --> tests/errors/test_set3.py:5:9
  |
5 |     i = s.pop(3)
  |         ^^^^^^^^ 
